--- a/crowd-voice-front-end-project/package.json
+++ b/crowd-voice-front-end-project/package.json
@@ -138,6 +138,8 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "@types/jquery": "^2.0.34",
+    "@types/signalr": "^2.2.32",
     "angular2-moment": "^1.0.0-beta.rc.1",
     "core-js": "2.4.0",
     "es-module-loader": "1.0.0",
@@ -148,6 +150,7 @@
     "ng2-bootstrap": "1.1.5",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "signalr": "^2.2.1",
     "systemjs": "0.19.38",
     "zone.js": "0.6.23"
   }
